--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <img src="6ffa6619-da9b-4585-896e-25f4e99df5cb.jpeg" alt="Meme lucu" />
   <button id="musicBtn">🎵 Pyutar musiknyaaaaaa</button>
 
-  <footer>ini waterfiremark eaKkKk</footer>
+  <footer>dari dapi eak</footer>
 
   <audio id="bgm" loop>
     <!-- GANTI LINK DI BAWAH INI DENGAN LINK MUSIKMU (MP3, WAV, DLL) -->
@@ -176,3 +176,4 @@
   </script>
 </body>
 </html>
+
